data/forge_javadoc/1.7.10/raw/net/minecraft/block/material/Material.md
---
title: "Material"
description: "public class Material extends java.lang.Object"
package: "net/minecraft/block/material"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/block/material/Material.html"
sourceType: javadoc
---

# Material

**Inheritance:** java.lang.Object → net.minecraft.block.material.Material

## Class signature

```java
public class Material extends java.lang.Object
```

## Constructors

- `Material(MapColor p_i2116_1_)`

## Methods

- `boolean blocksMovement()`
- `boolean getCanBlockGrass()`
- `boolean getCanBurn()`
- `MapColor getMaterialMapColor()`
- `int getMaterialMobility()`
- `boolean isAdventureModeExempt()`
- `boolean isLiquid()`
- `boolean isOpaque()`
- `boolean isReplaceable()`
- `boolean isSolid()`
- `boolean isToolNotRequired()`
- `protected Material setAdventureModeExempt()`
- `protected Material setBurning()`
- `protected Material setImmovableMobility()`
- `protected Material setNoPushMobility()`
- `Material setReplaceable()`
- `protected Material setRequiresTool()`

## Fields

- `static Material air`
- `static Material anvil`
- `static Material cactus`
- `static Material cake`
- `static Material carpet`
- `static Material circuits`
- `static Material clay`
- `static Material cloth`
- `static Material coral`
- `static Material craftedSnow`
- `static Material dragonEgg`
- `static Material fire`
- `static Material glass`
- `static Material gourd`
- `static Material grass`
- `static Material ground`
- `static Material ice`
- `static Material iron`
- `static Material lava`
- `static Material leaves`
- `static Material packedIce`
- `static Material piston`
- `static Material plants`
- `static Material portal`
- `static Material redstoneLight`
- `static Material rock`
- `static Material sand`
- `static Material snow`
- `static Material sponge`
- `static Material tnt`
- `static Material vine`
- `static Material water`
- `static Material web`
- `static Material wood`
